# PicoLimbo

./: ACTION_BAR_PERSISTENCE_IMPLEMENTATION.md  BUG_FIX_SUMMARY.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FORGE_PROTOCOL_DESIGN.md  IMPLEMENTATION_SUMMARY_CN.md  README.md  package-lock.json  test_action_bar_config.toml  test_forge_config.toml
.github/workflows/: ci.yml  release.yml
crates/macros/src/: lib.rs  registry_keys.rs
crates/minecraft_packets/: Cargo.toml
crates/minecraft_packets/src/configuration/: configuration_client_bound_plugin_message_packet.rs  configuration_server_bound_plugin_message_packet.rs  mod.rs  registry_data_packet.rs  update_tags_packet.rs
crates/minecraft_packets/src/configuration/data/: registry_entry.rs
crates/minecraft_packets/src/handshaking/: handshake_packet.rs
crates/minecraft_packets/src/login/: custom_query_packet.rs
crates/minecraft_packets/src/play/: chunk_data_and_update_light_packet.rs  client_bound_keep_alive_packet.rs  client_bound_plugin_message_packet.rs  commands_packet.rs  disconnect_packet.rs  login_packet.rs  system_chat_message_packet.rs  update_time_packet.rs
crates/minecraft_packets/src/play/data/: chunk_context.rs  chunk_data.rs  chunk_section.rs  light_data.rs
crates/minecraft_packets/src/play/data/login_packet_data/: post_v1_16.rs  post_v1_20_2.rs
crates/minecraft_packets/src/status/data/: status_response.rs
crates/minecraft_protocol/: Cargo.toml
crates/minecraft_protocol/src/: lib.rs
crates/minecraft_protocol/src/data/: coordinates.rs  dimension.rs
crates/minecraft_protocol/src/data_types/: hash_map.rs  identifier.rs  mod.rs  nbt.rs  var_long.rs  vec_no_length.rs
crates/pico_binutils/src/: binary_reader.rs  lib.rs  var_long.rs
crates/pico_structures/: Cargo.toml
crates/pico_structures/examples/: schematic.rs
crates/pico_structures/src/: internal_block_entity.rs  lib.rs  schematic.rs  schematic_file.rs
crates/pico_structures/src/block_entities/: generic.rs  sign.rs
crates/pico_text_component/: Cargo.toml
crates/pico_text_component/src/: component.rs
crates/protocol_version/src/: protocol_version.rs
data/src/: generate.ts
data/src/clean/: cleanData.ts
docker/: Dockerfile
docs/.vitepress/: config.mts
docs/about/: community-projects.md  faq.md  installation.md  introduction.md  supported-versions.md  troubleshooting.md
docs/config/: proxy-integration.md  schematic-loading.md
docs/developer/: building-java-wrapper.md  customizing-server-brand.md
docs/tutorials/: authentication.md  schematic-conversion.md
java_wrapper/wrapper/src/main/java/dev/quozul/: BungeeCordPlugin.java  PicoLimboRunner.java  Standalone.java  VelocityPlugin.java
pico_libraries/pico_identifier/: Cargo.toml
pico_libraries/pico_identifier/src/: error.rs  identifier.rs  identifier_fmt.rs  lib.rs  serde_impl.rs  validation.rs
pico_libraries/pico_identifier/tests/: edge_cases.rs  identifier.rs  identifier_fmt.rs  serde_impl.rs  traits.rs
pico_libraries/pico_nbt/: Cargo.toml
pico_libraries/pico_nbt/examples/: json_to_nbt.rs  nbt_to_snbt.rs  value_de.rs
pico_libraries/pico_nbt/src/: de.rs  error.rs  io.rs  json.rs  lib.rs  options.rs  reader.rs  ser.rs  snbt.rs  value.rs
pico_libraries/pico_nbt/test_files/: nameless_root_hello_world.nbt  sponge-v3.schem
pico_libraries/pico_nbt/tests/: api_tests.rs  de.rs  evolution_tests.rs  repro_struct_ser.rs  ser.rs  serde_tests.rs  unit_tests.rs  value_deserialization.rs
pico_libraries/pico_precomputed_registries/: Cargo.toml
pico_libraries/pico_precomputed_registries/src/: lib.rs
pico_libraries/pico_registries/: Cargo.toml  clippy.toml
pico_libraries/pico_registries/src/: error.rs  lib.rs  registry_keys.rs
pico_libraries/pico_registries/src/data/: mod.rs  registry.rs  registry_entry.rs  registry_entry_value.rs  registry_key.rs  registry_manager.rs  tag.rs
pico_libraries/pico_registries/src/registry_provider/: dimension.rs  dimension_info.rs  mod.rs  registry_data_v1_20_5.rs  runtime_registry_provider.rs  shared.rs  tagged_registries.rs
pico_libraries/pico_registries/src/registry_provider/registry_codec/: mod.rs  registry_codec_v1_16.rs  registry_codec_v1_16_2.rs
pico_libraries/pico_registries/src/reports/: mod.rs  registries_report.rs
pico_limbo/: Cargo.toml
pico_limbo/src/: lib.rs  main.rs  server_brand.rs
pico_limbo/src/configuration/: config.rs  forge.rs  forwarding.rs  mod.rs
pico_limbo/src/forge/: mod.rs  recorder.rs  replay.rs  snapshot.rs  snapshot_io.rs  status_proxy.rs  upstream_client.rs  velocity_forwarder.rs
pico_limbo/src/forwarding/: check_velocity_key_integrity.rs
pico_limbo/src/handlers/: configuration.rs  configuration_plugin_message.rs  handshake.rs  mod.rs
pico_limbo/src/handlers/login/: custom_query_answer.rs  login_acknowledged.rs  login_start.rs
pico_limbo/src/handlers/play/: send_chunks_circularly.rs
pico_limbo/src/handlers/status/: status_request.rs
pico_limbo/src/server/: client_data.rs  client_state.rs  game_profile.rs  network.rs  packet_handler.rs  packet_registry.rs  shutdown_signal.rs  start_server.rs
pico_limbo/src/server_state/: mod.rs
