[package]
name = "pico_limbo"
version = "1.12.2+mc26.1.2"
edition = "2024"

[lib]
name = "pico_limbo_lib"
path = "src/lib.rs"
crate-type = ["cdylib"]

[[bin]]
name = "pico_limbo"
path = "src/main.rs"

[dependencies]
blocks_report = { path = "../crates/blocks_report" }
macros = { path = "../crates/macros" }
minecraft_packets = { path = "../crates/minecraft_packets" }
minecraft_protocol = { path = "../crates/minecraft_protocol" }
net = { path = "../crates/net" }
pico_structures = { path = "../crates/pico_structures" }
pico_text_component = { path = "../crates/pico_text_component" }
pico_registries = { path = "../pico_libraries/pico_registries" }
pico_precomputed_registries = { path = "../pico_libraries/pico_precomputed_registries" }
pico_nbt = { path = "../pico_libraries/pico_nbt" }
base64 = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
hmac = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
md5 = { workspace = true }
sha2 = { workspace = true }
subtle = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
tokio-util = { workspace = true }
