[package]
name = "pico_structures"
version = "0.1.0"
edition = "2024"

[dependencies]
blocks_report = { path = "../blocks_report" }
minecraft_protocol = { path = "../minecraft_protocol" }
pico_binutils = { path = "../pico_binutils", features = ["binary_reader"] }
pico_nbt = { path = "../../pico_libraries/pico_nbt" }
pico_text_component = { path = "../pico_text_component" }
flate2 = { workspace = true }
rayon = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde_bytes = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
clap = { workspace = true }
anyhow = { workspace = true }
